--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="dist/style.css">
     <title>Mini compiler frog</title>
 </head>
 
@@ -72,6 +72,6 @@ FRG_End
         </footer>
     </div>
 </body>
-<script type="module" src="main.js"></script>
+<script type="module" src="dist/main.js"></script>
 
 </html>
