adding begin end check

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <span>choose frog file</span>
                     <input type="file" class="file-upload-input" id="fileUploaded" accept=".frog, .txt">
                 </label>
-                <p class="file-path" id="filePath">test.frog</p>
+                <p class="file-path" id="filePath" style="display: none;"></p>
             </article>
             <article class="btns">
                 <button class="active" id="lxAnalyser">lexical analyser</button>
